--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </p>
         <button>Aprende más</button>
       </section>
+      <nav>
       <aside class="sidebar">
         <h3>Barra lateral</h3>
         <ul>
@@ -29,6 +30,7 @@
           <li>contacto</li>
         </ul>
       </aside>
+    </nav>
     </main>
     <section class="features">
       <h2>Home</h2>
