--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         <button>Detalles</button>
       </div>
     </section>
+    <nav class="footer">
     <footer>
       <p><strong>Powered by Rock the Code</strong></p>
     </footer>
+  </nav>
   </body>
 </html>
 
